# notify

./: index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/app/: notify.sqlite
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  list.rs  prelude.rs  task.rs
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs  list_service.rs
src-tauri/src/: main.rs
src/components/: DefaultCard.vue  Greet.vue  ListCard.vue  ListItem.vue
src/routers/: index.ts
src/screens/: HomeScreen.vue  ListScreen.vue
src/styles/: main.scss
src/utils/: typing.ts
