[package]
name = "notice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
memebers = [".", "entity", "migration"]
members = ["entity", "service"]

[lib]
name = "notice_lib"
crate-type = ["lib", "cdylib", "staticlib"]


[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-sqlite", "macros" ] }
tokio = { version="1.39.3", features= ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

